migrate db, add server name and description, add function of editing server basic info
