# docs/swagger.json
@@ -103,6 +103,12 @@
                         "schema": {
                             "$ref": "#/definitions/internal_models.ServerCreateRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "x-token",
+                        "name": "x-token",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -131,6 +137,12 @@
                         "schema": {
                             "$ref": "#/definitions/internal_models.ServerDeleteRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "x-token",
+                        "name": "x-token",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -217,6 +229,12 @@
                         "schema": {
                             "$ref": "#/definitions/internal_models.ServerAccountDeleteRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "x-token",
+                        "name": "x-token",
+                        "in": "header"
                     }
                 ],
                 "responses": {
@@ -381,6 +399,54 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/internal_models.ServerInfoResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "server"
+                ],
+                "summary": "更新服务器数据",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "host",
+                        "name": "host",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "port",
+                        "name": "port",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "serverUpdateRequest",
+                        "name": "serverUpdateRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_models.ServerUpdateRequest"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "x-token",
+                        "name": "x-token",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_models.ServerUpdateResponse"
                         }
                     }
                 }
@@ -830,7 +896,13 @@
                 "deleted_at": {
                     "$ref": "#/definitions/gorm.DeletedAt"
                 },
+                "description": {
+                    "type": "string"
+                },
                 "host": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 },
                 "os_type": {
@@ -938,7 +1010,13 @@
                 "admin_account_pwd": {
                     "type": "string"
                 },
+                "description": {
+                    "type": "string"
+                },
                 "host": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 },
                 "os_type": {
@@ -1144,7 +1222,7 @@
                 }
             }
         },
-        "internal_models.ServerRemoteAccessingAccountInfo": {
+        "internal_models.ServerRemoteAccessingAccount": {
             "type": "object",
             "properties": {
                 "account_name": {
@@ -1165,13 +1243,33 @@
                 "infos": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/internal_models.ServerRemoteAccessingAccountInfo"
+                        "$ref": "#/definitions/internal_models.ServerRemoteAccessingAccount"
                     }
                 },
                 "output": {
                     "type": "string"
                 }
             }
+        },
+        "internal_models.ServerUpdateRequest": {
+            "type": "object",
+            "properties": {
+                "admin_account_name": {
+                    "type": "string"
+                },
+                "admin_account_pwd": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_models.ServerUpdateResponse": {
+            "type": "object"
         },
         "internal_models.SessionsCheckResponse": {
             "type": "object",
